--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
-    <p>Welcome to Rock, Papers, Scissors</p>
-    <p>Please open your browser's console to play (Ctrl+Shift+I)</p>
+    <p>Rock, Papers, Scissors</p>
+    <h1>Player Score</h1>
+    <h2 class="score">0</h2>
+    <button class="rockbtn">Rock</button>
+    <button class="paperbtn">Paper</button>
+    <button class="scissorsbtn">Scissors</button>
+
 </body>
 </html>
